# qforge-newtree

./: .gitignore  CHECKLIST  CodingStyleGuide.txt  Makefile  Makefile.am  README  README.WIN  ROADMAP  acconfig.h  acinclude.m4  bootstrap  configure.in  dsparil  newtree.dsw  quakeforge.lsm.in
RPM/: Makefile.am
debian/: Makefile.am  changelog  control  qf-server.docs  quakeforge.conf  rules
doc/: Makefile.am  cvarlist.txt
doc/man/: Makefile.am
doc/texinfo/: .gitignore  Makefile.am
include/: .gitignore  Makefile.am  anorms.h  asm_i386.h  bothdefs.h  bspfile.h  build.h  buildnum.h  cdaudio.h  checksum.h  cl_cam.h  cl_ents.h  cl_input.h  cl_main.h  cl_pred.h  cl_slist.h  cl_tent.h  client.h  cmd.h  commdef.h  common.h  compat.h  console.h  context_x11.h  crc.h  cvar.h  d_iface.h  d_ifacea.h  d_local.h  dga_check.h  draw.h  fbset.h  fractalnoise.h  glquake.h  glquake2.h  host.h  in_win.h  info.h  input.h  keys.h  (+50 more)
include/win32/: version.h  version.h.in
include/win32/bc/: config.h
include/win32/mingw/: config.h
include/win32/resources/: resource.h
include/win32/vc/: config.h
source/: .gdbinit  .gitignore  Makefile  Makefile.am  build.c  buildnum.c  cd_audio.c  cd_dos.c  cd_linux.c  cd_null.c  cd_sdl.c  cd_sgi.c  cd_win.c  checksum.c  cl_cam.c  cl_cmd.c  cl_cvar.c  cl_demo.c  cl_ents.c  cl_input.c  cl_main.c  cl_math.S  cl_misc.c  cl_model.c  cl_parse.c  cl_pred.c  cl_slist.c  cl_sys_sdl.c  cl_sys_unix.c  cl_sys_win.c  cl_tent.c  cl_trans.c  cmd.c  com.c  common.c  console.c  context_x11.c  crc.c  cvar.c  d_copy.S  (+214 more)
tools/: cvar_doc.py  zpak
