## Process this file with automake to produce Makefile.in
EXTRA_DIST = adivtab.h anorm_dots.h anorms.h asm_draw.h asm_i386.h block16.h block8.h bothdefs.h bspfile.h cdaudio.h client.h cmd.h common.h console.h crc.h cvar.h d_iface.h d_ifacea.h d_local.h draw.h gl_warp_sin.h glquake.h glquake2.h in_win.h input.h keys.h mathlib.h mdfour.h menu.h model.h modelgen.h net.h pmove.h pr_comp.h progdefs.h progs.h protocol.h quakeasm.h quakedef.h qwsvdef.h r_local.h r_shared.h render.h resource.h sbar.h screen.h server.h sound.h spritegn.h sys.h uint32.h vid.h view.h wad.h winquake.h world.h zone.h \
	win32/bc/config.h win32/vc/config.h
