## Process this file with automake to produce Makefile.in
EXTRA_DIST = adivtab.h anorm_dots.h anorms.h asm_draw.h asm_i386.h block16.h \
	block8.h bothdefs.h bspfile.h buildnum.h cdaudio.h checksum.h \
	cl_slist.h client.h cmd.h commdef.h compat.h config.h.in console.h \
	context_x11.h crc.h cvar.h d_iface.h d_ifacea.h d_local.h dga_check.h \
	draw.h gcc_attr.h gl_warp_sin.h glquake.h in_win.h info.h input.h \
	joystick.h keys.h link.h locs.h mathlib.h mdfour.h menu.h model.h \
	modelgen.h msg.h net.h pcx.h pmove.h pr_comp.h progdefs.h progs.h \
	protocol.h qargs.h qdefs.h qendian.h qstructs.h qtypes.h quakeasm.h \
	quakedef.h quakefs.h quakeio.h r_local.h r_shared.h render.h \
	resource.h sbar.h screen.h server.h sizebuf.h sound.h spritegn.h \
	sys.h tga.h teamplay.h uint32.h va.h vid.h view.h wad.h winquake.h \
	world.h zone.h \
	win32/fnmatch.h win32/version.h win32/version.h.in \
	win32/resources/icon1.ico win32/resources/resource.h \
	win32/resources/quakeforge.rc win32/bc/config.h win32/vc/config.h \
	win32/vc/dirent.h
